# Clinical-AI-Multi-Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  PRD — Clinical AI Multi-Agent Assistant.md  README.md  Roadmap Clinical AI Multi-Agent Backend.md  alembic.ini  docker-compose.yml  pyproject.toml
.atl/: skill-registry.md
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 0001_create_clinical_cases.py
app/: main.py
app/agents/: base.py  cardiology.py  clinical.py  diagnosis.py  emergency.py  pharmacology.py  radiology.py  router.py
app/core/: __init__.py  callbacks.py  config.py  exceptions.py  llm.py  logging.py  retry.py
app/db/: models.py  repository.py  session.py
app/models/: agent_config.py  clinical.py
app/rag/: chain.py  embeddings.py  loader.py  retriever.py
app/routes/: clinical.py  health.py
app/services/: __init__.py  integrator.py
docker/: Dockerfile.api  Dockerfile.indexer  compose.dev.yml  compose.prod.yml  compose.vps.yml  compose.yml
docs/: DEPLOY_PIPELINE_PROPOSAL.md  README.es.md
docs/architecture/: agent-priority.md  clinical-flow.md  routing-rules.md
docs/prompts/: cardiology-agent.md  clinical-agent.md  diagnosis-agent.md  emergency-agent.md  orchestrator.md  pharmacology-agent.md  radiology-agent.md
envs/: env.dev.example  env.prod.example
scripts/: deploy.sh  dev-up.sh  dev.py  index-rag.sh  indexer.py  prod-down.sh  prod-up.sh  smoke_test.py
tests/: test_agent_name_determinism.py  test_agents.py  test_agents_fase7.py  test_error_handling.py  test_health.py  test_integrator.py  test_llm_agnostic_provider.py  test_llm_factory.py  test_logging.py  test_main_startup.py  test_pydantic_advanced.py  test_rag.py  test_repository.py  test_retriever.py  test_router.py  test_routes.py
