[project]
name = "clinical-ai-multi-agent"
version = "0.1.0"
description = "Clinical AI Multi-Agent Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",
    "alembic>=1.14.0",
    "openai>=2.30.0",
    # Fase 3: LangChain Core + providers
    # langchain-core: el motor de LCEL (el operador |, los Runnables)
    # langchain-openai: ChatOpenAI para OpenAI y LM Studio
    # langchain-groq: ChatGroq para Groq (gratis en dev)
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-groq>=0.2.0",
    # Fase 4: RAG
    # langchain-text-splitters: herramienta para dividir documentos en chunks
    # langchain-postgres: PGVector — vector store sobre PostgreSQL (no Pinecone, no Chroma)
    # psycopg[binary]: driver sync de PostgreSQL que usa PGVector internamente
    "langchain-text-splitters>=0.3.0",
    "langchain-postgres>=0.0.12",
    "psycopg[binary]>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "aiosqlite>=0.22.1",
]
